[package]
name = "moonshot_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Simplified dependencies to avoid Windows build issues
# We'll use HTTP instead of WebSocket for now
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
ethers = { version = "2.0.14", features = ["ws"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
